# Cpp-GenerativeAI

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/Interfaces/DrawingApp/: DrawingApp.cpp  DrawingApp.h
src/Interfaces/DrwaingApp/: DrawingApp.cpp  DrawingApp.h
src/Interfaces/NetworkViewer/: NetworkViewer.cpp  NetworkViewer.h
src/NetworkViewer/: NetworkViewer.cpp  NetworkViewer.h
src/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
src/Utility/: Utility.cpp  Utility.h
vendors/json/: json.hpp
